# aoc2021

./: .gitignore  Cargo.toml  README.md  session_key.txt.example
src/: main.rs  util.rs
src/days/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  mod.rs  util.rs
