[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.7"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1